--- a/pkgr.yml
+++ b/pkgr.yml
@@ -23,6 +23,10 @@ Packages:
   - here
   - ggthemes
   - FME
+  - DEoptim
+  - GenSA
+  - hydroPSO
+  - PKPDmisc
   
 Repos:
   - MPN: https://mpn.metworx.com/snapshots/stable/2022-08-31/
